clean up following sonar recommandations.